# maga-text-extractor

./: .gitignore  README.md  main.py  pyproject.toml  run.bat  sample.ipynb
